test/types/type_variables/deitz/test_clone_class1a.good
  called from test_clone_class1a.chpl:10
  called from test_clone_class1a.chpl:12
  called from test_clone_class1a.chpl:14
  called from test_clone_class1a.chpl:16
  called from test_clone_class1a.chpl:8
  called from test_clone_class1a.chpl:8
error: expression has mixed basic types:( int64 float64 null ) 
error: expression has mixed basic types:( int64 float64 null ) 
error: expression has mixed basic types:( int64 float64 null ) 
error: expression has mixed basic types:( int64 float64 null ) 
fail: fatal error, program does not type
test_clone_class1a.chpl:10: expression has mixed basic types:( int64 float64 null ) 
test_clone_class1a.chpl:14: expression has mixed basic types:( int64 float64 null ) 
test_clone_class1a.chpl:1: class foo:: 'x' has mixed basic types:( int64 float64 null ) 
test_clone_class1a.chpl:4: expression has mixed basic types:( int64 float64 null ) 
